fixed layout bug on tasks and main patient view

--- a/src/app/modules/main/main-dashboard/patient-view/patient-card/patient-card.component.scss
+++ b/src/app/modules/main/main-dashboard/patient-view/patient-card/patient-card.component.scss
@@ -8,11 +8,7 @@
     cursor: pointer;
   }
 }
-.colors {
-  display: block;
 
-  background-color: rgb(253, 245, 245);
-}
 .add {
   display: block;
 
